Switch to java 11 as the main stream, merge java 11 branch into master.