@@ -7,13 +7,9 @@ set PROPERTY_FILE=version.properties
 FOR /F "tokens=1,2 delims==" %%G IN (%PROPERTY_FILE%) DO (set %%G=%%H)
 
 set VERSION=%version%
-
 set JAR_NAME=%jar.name%
-
 set RELEASE_TAG=%release.tag%
-
 set "LIB_DIR=%DIR%\lib"
-
 set "PATH=%PATH%;%LIB_DIR%"
 
 :: This is just to avoid warnings about missing native BLAS libs when running the REPL
@@ -34,14 +30,17 @@ if defined JAVA_HOME (
 	set JAVA_CMD=javaw
 )
 
-start %JAVA_CMD% -cp %JAR_NAME% %JAVA_OPTS% se.alipsa.ride.splash.SplashScreen
+set MODULES=javafx.controls,javafx.media,javafx.web,javafx.swing
+
+start %JAVA_CMD% --module-path %LIB_DIR%/win --add-modules %MODULES% -cp %JAR_NAME% %JAVA_OPTS% se.alipsa.ride.splash.SplashScreen
 
 :: it is possible to force the initial packageloader by adding:
 :: -DConsoleComponent.PackageLoader=ClasspathPackageLoader
 :: to the command below
 :: also if you dont want the console to remain, do start javaw instead of java
 
-start %JAVA_CMD% -Djava.library.path="%LIB_DIR%" -cp %JAR_NAME%;%LIB_DIR%\* ^
+start %JAVA_CMD% --module-path %LIB_DIR%/win --add-modules %MODULES% ^
+-Djava.library.path="%LIB_DIR%" -cp %JAR_NAME%;%LIB_DIR%/* ^
 -Dcom.github.fommil.netlib.BLAS=%BLAS% ^
 -Dcom.github.fommil.netlib.LAPACK=%LAPACK% ^
 -Dcom.github.fommil.netlib.ARPACK=%ARPACK% ^
